AC_INIT(profiler/heap-shot.c)
AM_INIT_AUTOMAKE(heap-shot, 0.1)
AC_PROG_CC
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(PROFILER, mono glib-2.0)

AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)
pkglibdir=$prefix/lib/heapshot
AC_SUBST(pkglibdir)

AC_CONFIG_FILES([HeapShot/heap-shot],[chmod +x HeapShot/heap-shot])
AC_CONFIG_FILES([HeapShot.Gui/heap-shot-gui],[chmod +x HeapShot.Gui/heap-shot-gui])

AC_OUTPUT([
Makefile
profiler/Makefile
HeapShot.Reader/Makefile
HeapShot.Gui.Widgets/Makefile
HeapShot.Gui/Makefile
HeapShot/Makefile
])


